# functional-python

./: .gitignore  Makefile  README.md  conftest.py  main.py  pyproject.toml
src/app/adapters/: in_memory_store.py
src/app/application/: ports.py  use_cases.py
src/app/domain/: models.py  rules.py
tests/: conftest.py
tests/builders/: models.py
tests/unit_tests/adapters/: test_memory_store.py
tests/unit_tests/application/: test_use_cases.py
tests/unit_tests/domain/: test_rules.py
