[project]
name = "functional-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.31.6",
    "faker>=37.8.0",
    "pyrsistent>=0.20.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
]

[tool.ruff]
target-version = "py313"
line-length = 79
fix = true
unsafe-fixes = true  # allows aggressive auto-fixes when safe
show-fixes = true

# Enable key linting categories
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # import sorting
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
    "TID",  # tidy imports
    "N",    # naming conventions
    "RUF",  # Ruff-specific rules
    "PL",   # pylint-like checks
]

# Ignore specific errors
lint.ignore = [
    "E501",  # line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 72
